@@ -3,6 +3,8 @@ ObjScanner.pm
 MANIFEST
 README
 Makefile.PL
+demo/objscan.pl
 t/basic.t
 t/rudi.t
 t/options.t
+t/pseudo_hash.t
