@@ -1,5 +1,9 @@
-The scanner provide a GUI to scan the attributes of an object. It can
-also be used to scan the elements of a hash or an array.
+Tk::ObjScanner provides a GUI to scan any perl data including the
+attributes of an object.
+
+Starting from version 1.020:
+- pseudo hashes are also correctly viewed.
+- a demo is installed so Tk's widget demo will feature ObjScanner
 
 The scanner is a composite widget made of a HList and a text window
 (actually a TK::ROText). This widget acts as a scanner to the
@@ -13,12 +17,14 @@ in the HList.
 If the value is a scalar, the scalar will be displayed in the text window.
 (Which is handy if the value is a multi-line string)
 
-Note that the look and fell is completely changed compared to previous
-version. 
-
-This module was written with perl5.00503 and Tk 800.020
+This module was written with perl5.6.0 and Tk 800.022
 
 See the embedded documentation in the module for more details.
+
+Note that test program (in the 't' directory) can be run interactively
+this way :
+
+ perl t/xxx.t 1
 
 Comments and suggestions are always welcome.
 
@@ -27,9 +33,11 @@ made. Many improvements were made thanks to his efforts.
 
 Thanks to Rudi Farkas for the 'watch' patch.
 
+Thanks to Slavec Rezic for the pseudo-hash prototype.
+
 Legal mumbo jumbo:
 
- Copyright (c) 1997-1999 Dominique Dumont. All rights reserved.
+ Copyright (c) 1997-2001 Dominique Dumont. All rights reserved.
  This program is free software; you can redistribute it and/or
  modify it under the same terms as Perl itself.
 
