@@ -27,7 +27,10 @@ package Toto ;
 sub new
   {
     my $type = shift ;
-    my $tkstuff = shift ;
+
+    # add recursive data only if interactive test
+    my $tkstuff = $trace ? shift : "may be another time ..." ;
+
     my $scalar = 'dummy scalar ref value';
     open (FILE,"t/basic.t") || die "can't open myself !\n";
     my $glob = \*FILE ; # ???
@@ -49,7 +52,8 @@ sub new
        'is undef' => undef,
        'some text' => "some \n dummy\n Text\n",
        'tk widget' => $tkstuff
-      } ;
+      };
+    
     bless $self,$type;
   }
 
@@ -59,6 +63,7 @@ package main;
 use strict ;
 my $toto ;
 my $mw = MainWindow-> new ;
+$mw->geometry('+10+10');
 
 my $w_menu = $mw->Frame(-relief => 'raised', -borderwidth => 2);
 $w_menu->pack(-fill => 'x');
@@ -73,17 +78,42 @@ my $dummy = new Toto ($mw);
 print "ok ",$idx++,"\n";
 
 print "Creating obj scanner\n" if $trace ;
-$mw -> ObjScanner
+my $s = $mw -> ObjScanner
   (
    'caller' => $dummy, 
    #destroyable => 0,
    title => 'test scanner'
-  )
-  -> pack(expand => 1, fill => 'both') ;
+  );
+
+$s -> pack(expand => 1, fill => 'both') ;
 
 print "ok ",$idx++,"\n";
 
-MainLoop ; # Tk's
+$mw->idletasks;
+
+sub scan
+  {
+    my $topName = shift ;
+    $s->yview($topName) ;
+    $mw->after(200); # sleep 300ms
+
+    foreach my $c ($s->infoChildren($topName))
+      {
+        my $item = $s->info('data', $c);
+        $s->displaySubItem($c,$item);
+        scan($c);
+      }
+    $mw->idletasks;
+  }
+
+if ($trace)
+  {
+    MainLoop ; # Tk's
+  }
+else
+  {
+    scan('root');
+  }
 
 print "ok ",$idx++,"\n";
 
