@@ -41,7 +41,8 @@ use Math::BigInt;
 sub new
   {
      my $type = shift;
-     my $tkstuff = shift;
+     # add recursive data only if interactive test
+     my $tkstuff = $trace ? shift : "may be another time ..." ;
 
      my $scl = 'my scalar var';
 
@@ -77,6 +78,7 @@ package main;
 
 my $toto ;
 my $mw = MainWindow-> new ;
+$mw->geometry('+10+10');
 
 my $w_menu = $mw->Frame(-relief => 'raised', -borderwidth => 2);
 $w_menu->pack(-fill => 'x');
@@ -92,16 +94,41 @@ my $dummy = new toto ($mw);
 print "ok ",$idx++,"\n";
 
 print "Creating obj scanner\n" if $trace ;
-$mw -> ObjScanner
+my $s = $mw -> ObjScanner
   (
    'caller' => $dummy,
    title => 'test scanner'
-  )
-  -> pack(expand => 1, fill => 'both') ;
+  );
+$s  -> pack(expand => 1, fill => 'both') ;
 
 print "ok ",$idx++,"\n";
 
-MainLoop ; # Tk's
+$mw->idletasks;
+
+sub scan
+  {
+    my $topName = shift ;
+    $s->yview($topName) ;
+    $mw->after(200); # sleep 300ms
+
+    foreach my $c ($s->infoChildren($topName))
+      {
+        my $item = $s->info('data', $c);
+        $s->displaySubItem($c,$item);
+        scan($c);
+      }
+    $mw->idletasks;
+  }
+
+if ($trace)
+  {
+    MainLoop ; # Tk's
+  }
+else
+  {
+    scan('root');
+  }
+
 
 print "ok ",$idx++,"\n";
 
